change (Get a list of all messages by channel ID and Create a new message in a channel)and delete exception